git index file updated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
 
       <div class="icon-des">
         <% if(icon !== null)  {%>
-          <img class="icon" src="http://openweathermap.org/img/w/<%= icon %>.png" alt="">
+          <img style="color: blueviolet;" class="icon" src="http://openweathermap.org/img/w/<%= icon %>.png" alt="">
         <% } %>
         <% if(des !== null)  {%>
           <h3><%= des %></h3>
